home page added

--- a/src/accueil.html
+++ b/src/accueil.html
@@ -17,9 +17,8 @@ keywords:
       </div>
       <div class="col-md-6">
         <div class="menu_header">
-          <h2 class="menu_header-title">Nous sommes</h2>
-          <hr class="menu_header-separator">
-          <h2 class="menu_header-title2">dmb construction</h2>
+          <h2 class="menu_header-title black-after">Nous sommes&nbsp;</h2>
+          <h2 class="menu_header-title2">&nbsp;&nbsp;dmb construction</h2>
         </div>
         <div class="menu_content">
           <h3 class="menu_content-title">Une entreprise de construction</h3>
@@ -42,3 +41,313 @@ keywords:
   </div>
   <hr class="bbhr">
 </section>
+
+<section class="mene pt-0">
+  <div class="menu_header2">
+    <h2 class="menu_header-title linear-after">Construisons&nbsp;</h2>
+    <h2 class="menu_header-title2 text-white">&nbsp;&nbsp;ensemble l’avenir</h2>
+  </div>
+  <div class="section bg-black">
+    <div class="container-fluid">
+      <div class="row align-items-center">
+        <div class="col-md-6">
+          <div class="menu_content w-65">
+            <p class="menu_content-p text-white">
+              Faites confiance à DMB Construction pour
+              mener à bien votre projet, de la conception
+              à la réalisation.
+            </p>
+            <div class="mt-5 pt-3">
+              <a href="#" class="menu_content-link2">Nous contacter</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-6">
+          <div class="menu_image">
+            <img src="./assets/img/1.png" alt="" class="menu_image-img2">
+          </div>
+        </div>
+      </div>
+      <div class="row mt-5">
+        <div class="col-md-4">
+          <div class="menu_image">
+            <img src="./assets/img/img1.png" alt="" class="menu_image-img3">
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="menu_image">
+            <img src="./assets/img/img2.png" alt="" class="menu_image-img3">
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="menu_image">
+            <img src="./assets/img/img3.png" alt="" class="menu_image-img3">
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
+<section class="value section">
+  <div class="menu_header pb-0">
+    <h2 class="menu_header-title2 linear-before">&nbsp;&nbsp;NOS VALEURS</h2>
+  </div>
+  <div class="container">
+    <div class="row">
+      <div class="col-md-12">
+        <div class="menu_image">
+          <div class="menu_image-black">
+            <div class="mt-5 pt-3">
+              <a href="#" class="menu_content-link3">VOIR PLUS</a>
+            </div>
+          </div>
+          <img src="./assets/img/value.png" alt="" class="menu_image-img4">
+        </div>
+        <div class="menu_image-faq">
+          <div class="row align-items-center faq-item">
+            <div class="col-md-12">
+              <div class="menu_faq">
+                <h3 class="menu_faq-title" onclick="toggleFaq(this)">
+                  Qualité et professionnalisme
+                  <span class="faq-icon">+</span>
+                </h3>
+                <p class="menu_faq-p" style="display: none;">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium sapiente ea quisquam harum.
+                  Corrupti quod laborum repudiandae animi veritatis, fugit rem sapiente? Officiis minus harum ex porro
+                  velit cupiditate ad!
+                  Debitis aspernatur cumque ullam, dicta corporis ad, eius perferendis aut excepturi cum quibusdam
+                  nobis, esse quae! Minima, vero vel nostrum mollitia expedita tenetur repellat repellendus nesciunt
+                  labore dolorem quas animi.
+                </p>
+                <hr>
+              </div>
+            </div>
+            <div class="col-md-12">
+              <div class="menu_faq">
+                <h3 class="menu_faq-title" onclick="toggleFaq(this)">
+                  Respectnormes strictes
+                  <span class="faq-icon">+</span>
+                </h3>
+                <p class="menu_faq-p" style="display: none;">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium sapiente ea quisquam harum.
+                  Corrupti quod laborum repudiandae animi veritatis, fugit rem sapiente? Officiis minus harum ex porro
+                  velit cupiditate ad!
+                  Debitis aspernatur cumque ullam, dicta corporis ad, eius perferendis aut excepturi cum quibusdam
+                  nobis, esse quae! Minima, vero vel nostrum mollitia expedita tenetur repellat repellendus nesciunt
+                  labore dolorem quas animi.
+                </p>
+                <hr>
+              </div>
+            </div>
+            <div class="col-md-12">
+              <div class="menu_faq">
+                <h3 class="menu_faq-title" onclick="toggleFaq(this)">
+                  Précisions et devouement
+                  <span class="faq-icon">+</span>
+                </h3>
+                <p class="menu_faq-p" style="display: none;">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium sapiente ea quisquam harum.
+                  Corrupti quod laborum repudiandae animi veritatis, fugit rem sapiente? Officiis minus harum ex porro
+                  velit cupiditate ad!
+                  Debitis aspernatur cumque ullam, dicta corporis ad, eius perferendis aut excepturi cum quibusdam
+                  nobis, esse quae! Minima, vero vel nostrum mollitia expedita tenetur repellat repellendus nesciunt
+                  labore dolorem quas animi.
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
+
+<section class="mene section-y">
+  <div class="menu_header2 container justify-content-start">
+    <h2 class="menu_header-title linear-after text-left">&nbsp;</h2>
+    <h2 class="menu_header-title2 text-white text-left">&nbsp;&nbsp; <span class="text text-left">NOS</span> <br>SERVICES</h2>
+  </div>
+  <div class="bg-black p-y-5">
+    <div class="container">
+      <div class="row align-items-center">
+        <div class="col-md-12">
+          <div class="owl-carousel owl d-flex align-items-center">
+            <div class="menu_image">
+              <img src="./assets/img/owl1.jpeg" alt="" class="menu_image-owl">
+              <p class="menu_image-owl--p">GENIE CIVIL ET INFRASTRUCTURES</p>
+            </div>
+            <div class="menu_image">
+              <img src="./assets/img/owl2.jpeg" alt="" class="menu_image-owl">
+              <p class="menu_image-owl--p">CONSTRUCTION NEUVE</p>
+            </div>
+            <div class="menu_image">
+              <img src="./assets/img/owl3.jpeg" alt="" class="menu_image-owl">
+              <p class="menu_image-owl--p">RENOVATION ET REHABILITATION</p>
+            </div>
+            <div class="menu_image">
+              <img src="./assets/img/owl4.jpeg" alt="" class="menu_image-owl">
+              <p class="menu_image-owl--p">EXTENSION / SURELEVATION</p>
+            </div>
+            <div class="menu_image">
+              <img src="./assets/img/owl5.jpeg" alt="" class="menu_image-owl">
+              <p class="menu_image-owl--p">GENIE CIVIL ET INFRASTRUCTURES</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
+<section class="projects bg-off">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-12">
+        <div class="menu_header2 container justify-content-start">
+          <h2 class="menu_header-title linear-after text-left">&nbsp;NOS</h2>
+          <h2 class="menu_header-title2 text-white text-left">&nbsp;&nbsp;SERVICES</h2>
+        </div>
+        <div class="menu_image">
+          <img src="./assets/img/projects.jpeg" alt="" class="menu_image-img5">
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="section pt-5">
+    <div class="projects_card">
+      <div class="row align-items-center">
+        <div class="col-md-5">
+          <div class="projects_content">
+            <h3 class="projects_content-title">Construction d’une piscine municipale</h3>
+            <p class="projects_content-p">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+            <p class="projects_content-p">Etiam sodales ac felis id interdum</p>
+            <p class="projects_content-p">Etiam sodales ac felis id interdum</p>
+            <p class="projects_content-p">Etiam sodales ac felis id interdum</p>
+          </div>
+          <div class="mt-5">
+            <a href="#" class="menu_content-link">VOIR NOS REALISATION</a>
+          </div>
+        </div>
+        <div class="col-md-7">
+          <div class="row mt-5">
+            <div class="col-md-6 my-3">
+              <div class="projects_image">
+                <img src="./assets/img/project1.jpeg" alt="" class="projects_image-img">
+              </div>
+            </div>
+            <div class="col-md-6 my-3">
+              <div class="projects_image">
+                <img src="./assets/img/project2.jpeg" alt="" class="projects_image-img">
+              </div>
+            </div>
+            <div class="col-md-6 my-3">
+              <div class="projects_image">
+                <img src="./assets/img/project3.jpeg" alt="" class="projects_image-img">
+              </div>
+            </div>
+            <div class="col-md-6 my-3">
+              <div class="projects_image">
+                <img src="./assets/img/project4.jpeg" alt="" class="projects_image-img2">
+              </div>
+              <div class="projects_image">
+                <img src="./assets/img/project5.png" alt="" class="projects_image-img3">
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
+
+
+
+
+<section class="menu section bg-white">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-6">
+        <div class="menu_image">
+          <div class="menu_image-img6"></div>
+        </div>
+      </div>
+      <div class="col-md-6">
+        <div class="menu_header">
+          <h2 class="menu_header-title">La sécurité <br>
+            notre priorité absolue</h2>
+        </div>
+        <div class="menu_content">
+          <div class="blur">
+            <p class="menu_content-p">
+              La sécurité est notre priorité absolue chez DMB.
+              Nous respectons strictement les normes pour
+              assurer un environnement de travail protégé.
+              Protocoles rigoureux et collaboration étroite pour
+              prévenir les risques. Chez nous, chaque
+              personne compte, nous veillons à ce que tous
+              rentrent chez eux en sécurité.
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <hr class="bbhr">
+</section>
+<section class="engagement bg-off">
+  <div class="container">
+      <div class="row justify-content-center">
+        <div class="col-md-12 pt-5">
+          <div class="menu_header pb-3">
+            <h2 class="menu_header-title">NOS ENGAGEMENTS</h2>
+          </div>
+        </div>
+          <div class="engagement_icons w-100 d-flex justify-content-center pb-5">
+            <div class="row justify-content-center w-100">
+              <div class="col-md-3 d-flex flex-column justify-content-center align-items-center w-100">
+                <img class="engagement_icons-img" src="./assets/img/e1.png" />
+                <p class="engagement_icons-p">Satisfactions clients</p>
+              </div>
+              <div class="col-md-3 d-flex flex-column justify-content-center align-items-center w-100">
+                <img class="engagement_icons-img" src="./assets/img/e2.png" />
+                <p class="engagement_icons-p">Communication claire
+                  et transparence</p>
+              </div>
+              <div class="col-md-3 d-flex flex-column justify-content-center align-items-center w-100">
+                <img class="engagement_icons-img" src="./assets/img/e3.png" />
+                <p class="engagement_icons-p">L’excellence continue</p>
+              </div>
+              <div class="col-md-3 d-flex flex-column justify-content-center align-items-center w-100">
+                <img class="engagement_icons-img" src="./assets/img/e4.png" />
+                <p class="engagement_icons-p">Innovation</p>
+              </div>
+            </div>
+          </div>
+      </div>
+  </div>
+</section>
+
+
+
+
+
+<script>
+  function toggleFaq(element) {
+    const $p = $(element).next("p");
+    const $icon = $(element).find(".faq-icon");
+
+    if ($p.is(":hidden")) {
+      $p.slideDown(300);
+      $icon.text("-");
+    } else {
+      $p.slideUp(300);
+      $icon.text("+");
+    }
+  }
+</script>
+
+
+
