--- a/src/nos-prestations.html
+++ b/src/nos-prestations.html
@@ -6,7 +6,7 @@ description:
 keywords:
 ---
 
-<section class="banner">
+<section class="banner-prestation">
   <div class="container">
     <div class="banner_content">
       <h1 class="slider_content-title">
